--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,21 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+
+// ***************************************************************************
+
+
+
+
+@import './basis';
+@import './hero';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './reviews';
+@import './contacts';
+@import './footer';
+@import './main-modal';
+@import './modal-footer';
