--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,6 +4,6 @@
         <!-- <source  srcset="images/mobile/Display-x1/mobi-gallery-x1.jpg 1x, images/mobile/Display-x1/mobi-gallery-x2.jpg 2x" media="(max-width: 767px)"> -->
         <!-- <source  srcset=" 1x, .jpg 2x" media="(max-width: 1199px)">
         <source  srcset=".jpg 1x, .jpg 2x" media="(min-width: 1200px)"> -->
-        <img src="/images/mobile/Display-x1/mobi-hero-x1.png" width="170" height="410" alt="галерея">
+        <img src="./images/mobile/Display-x1/mobi-hero-x1.png" width="170" height="410" alt="мороженое">
     </picture>
 </section>
