--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,3 +1,97 @@
-<section class="try__8">
-    это секция контактов
+<section class="section-contacts">
+    <div class="container">
+        <h2 class="visibility-title">Contacts</h2>
+        <ul class="contacts-list">
+            <li>
+                <p class="contacts-list_point">cafe</p>
+                <h3 class="contacts-list_title">Chicago</h3>
+                <p class="contacts-list_text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+                <ul class="contacts-list_hours">
+                    <li class="contacts-list_block">
+                        <p class="contacts-list_day">Monday - Friday</p>
+                        <p class="contacts-list_time">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="contacts-list_block">
+                        <p class="contacts-list_day">Saturday - Sunday</p>
+                        <p class="contacts-list_time">08:00 AM - 16:00 PM</p>
+                    </li>
+                </ul>
+                <ul class="contacts-list_address">
+                    <li class="contacts-list_item">
+                        <a class="contact-list_link" href="mailto:noreply@envato.com">
+                            noreply@envato.com"
+                        </a>
+                    </li>
+                    <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
+                            +61(0) 383 766 284</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <p class="contacts-list_point">FOODTRUCK</p>
+                <h3 class="contacts-list_title">Los Angeles</h3>
+                <p class="contacts-list_text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+                <ul class="contacts-list_hours">
+                    <li class="contacts-list_block">
+                        <p class="contacts-list_day">Monday - Friday</p>
+                        <p class="contacts-list_time">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="contacts-list_block">
+                        <p class="contacts-list_day">Saturday - Sunday</p>
+                        <p class="contacts-list_time">08:00 AM - 16:00 PM</p>
+                    </li>
+                </ul>
+                <ul class="contacts-list_address">
+                    <li class="contacts-list_item">
+                        <a class="contact-list_link" href="mailto:noreply@envato.com">
+                            noreply@envato.com"
+                        </a>
+                    </li>
+                    <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
+                            +61(0) 383 766 284</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <p class="contacts-list_point">cafe</p>
+                <h3 class="contacts-list_title">New York</h3>
+                <p class="contacts-list_text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+                <ul class="contacts-list_hours">
+                    <li class="contacts-list_block">
+                        <p class="contacts-list_day">Monday - Friday</p>
+                        <p class="contacts-list_time">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="contacts-list_block">
+                        <p class="contacts-list_day">Saturday - Sunday</p>
+                        <p class="contacts-list_time">08:00 AM - 16:00 PM</p>
+                    </li>
+                </ul>
+                <ul class="contacts-list_address">
+                    <li class="contacts-list_item">
+                        <a class="contact-list_link" href="mailto:noreply@envato.com">
+                            noreply@envato.com"
+                        </a>
+                    </li>
+                    <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
+                            +61(0) 383 766 284</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <div class="contacts-btn">
+            <button class="locations-btn" type="button">Our Locations
+                <svg class="btn-icon" width="4" height="8">
+                    <use href=""></use>
+                </svg>
+            </button>
+            <button class="franchise-btn" type="button">Franchise
+                <svg class="btn-icon" width="4" height="8">
+                    <use href=""></use>
+                </svg>
+            </button>
+        </div>
+    </div>
 </section>
