--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,8 @@
 
 
 @import './basis';
+@import './variables';
+@import './hidden';
 @import './header';
 @import './mobi-menu';
 @import './hero';
