--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,69 @@
-<section class="try__3">
-    это секция реклама продукта
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<section class="products">
+    <p class="products__text">100% natural</p>
+    <h2 class="products__heading">products</h2>
+    <ul class="products-list">
+        <li class="products-list__products-item">
+            <h3 class="products-list__heading">ice cream</h3>
+            <span class="products-list__horizontal-scrolling">
+                <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
+                    <use href=./images/svg/sprite.svg#></use>
+                </svg>
+            </span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
+                error quos
+                corrupti eius? Sapiente aliquam cumque deserunt similique veritatis qui corporis molestiae, eos
+                repellendus, ipsa
+                minima? Libero!</p>
+            <button type="button" class="products-list__button">
+                <svg class="products-list__button-icon" width="40" height="40">
+                    <use href=./images/svg/sprite.svg#></use>
+                </svg>
+            </button>
+        </li>
+        <li class="products-list__products-item">
+            <h3 class="products-list__heading">ice coffee</h3>
+            <span class="products-list__horizontal-scrolling">
+                <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
+                    <use href=./images/svg/sprite.svg#></use>
+                </svg>
+            </span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
+                error quos
+                corrupti eius? Sapiente aliquam cumque deserunt similique veritatis qui corporis molestiae, eos
+                repellendus, ipsa
+                minima? Libero!</p>
+            <button type="button" class="products-list__button">
+                <svg class="products-list__button-icon" width="40" height="40">
+                    <use href=./images/svg/sprite.svg#></use>
+                </svg>
+            </button>
+        </li>
+        <li class="products-list__products-item">
+            <h3 class="products-list__heading">milkshakes</h3>
+            <span class="products-list__horizontal-scrolling">
+                <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
+                    <use href=./images/svg/sprite.svg#></use>
+                </svg>
+            </span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
+                error quos corrupti eius? Sapiente aliquam cumque deserunt similique veritatis qui corporis molestiae,
+                eos repellendus, ipsa minima? Libero!</p>
+            <button type="button" class="products-list__button">
+                <svg class="products-list__button-icon" width="40" height="40">
+                    <use href=./images/svg/sprite.svg#></use>
+                </svg>
+            </button>
+        </li>
+    </ul>
 </section>
+</body>
+</html>
