--- a/src/sass/_basis.scss
+++ b/src/sass/_basis.scss
@@ -38,6 +38,12 @@ img {
     font-weight: bold;
     line-height: 1.31;
 }
+.conteiner {
+   padding-left: 20px; 
+   padding-right: 20px;
+   margin: 0 auto;
+
+}
 .section-title {
     font-family: Titan One;
     font-style: normal;
