--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,3 +1,11 @@
-<section class="try__5">
-    это секция преимуществ товара
+<section class="advantages">
+   <div class="container">
+    <ul class="advantages__list">
+       <li> <svg class="" width="33px" height="50px">
+        <use href="./images/sprite.svg#icon-arrow-right"  ></use>
+    </svg>
+        <p class="advantages__bold-text">721</p>
+        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p></li>
+        </ul>
+   </div>
 </section>
