--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,4 +1,7 @@
-.try__5{
-    height: 300px;
-    background-color: #f1b8ff;
+.advantages{
+    background-color: var(--main-bg-color);
+}
+
+.container{
+    
 }
