--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,11 +1,40 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title lang="eu">Document</title>
+</head>
+<body>
+
 <section class="advantages">
-   <div class="container">
-    <ul class="advantages__list">
-       <li> <svg class="" width="33px" height="50px">
-        <use href="./images/sprite.svg#icon-arrow-right"  ></use>
-    </svg>
-        <p class="advantages__bold-text">721</p>
-        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p></li>
+    <h1 class="visually-hidden">advantages</h1>
+    <div class="container">
+        <ul class="advantages__list">
+            <li class="advantages__li">
+                <svg class="advantages__icon" width="33px" height="50px">
+                    <use href="./images/sprite.svg#icon-home"></use>
+                </svg>
+                <p class="advantages__bold-text">721</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantages__li">
+                <svg class="advantages__icon" width="50px" height="50px">
+                    <use href="./images/sprite.svg#icon-home"></use>
+                </svg>
+                <p class="advantages__bold-text">16kg</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantages__li">
+                <svg class="advantages__icon" width="44px" height="50px">
+                    <use href="./images/sprite.svg#icon-home"></use>
+                </svg>
+                <p class="advantages__bold-text">84</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
         </ul>
-   </div>
+    </div>
 </section>
+
+</body>
+</html>
