--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -119,8 +119,89 @@ img {
   background-color: #c6ffb8;
 }
 
+li {
+  list-style-type: none;
+}
+
 .advantages {
   background-color: var(--main-bg-color);
+  padding: 39px 0px 145px 0px;
+}
+
+.container {
+  max-width: 1200px;
+  min-width: 280px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .header .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+.advantages__bold-text {
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 1.13%;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.advantages__text {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 170%;
+}
+
+.advantages__li + .advantages__li {
+  margin-top: 38px;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
 .try__6 {
