--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,30 @@
-<header class="try__one">
-  <p>Вторая попытка</p>
+<header class="header">
+  <div class="container header__container">
+    <a href="../index.html" class="logo">
+      <img class="logo__icon" src="" alt="logo" width="199" height="50" />
+    </a>
+
+    <nav class="header__nav">
+      <ul class="nav">
+        <li class="nav__list">
+          <a href="../index.html" class="nav__link nav__link--current">Home</a>
+        </li>
+        <li class="nav__list"><a href="#" class="nav__link">About us</a></li>
+        <li class="nav__list"><a href="#" class="nav__link">How it’s made?</a></li>
+        <li class="nav__list"><a href="#" class="nav__link">Our products</a></li>
+        <li class="nav__list"><a href="#" class="nav__link">Contact</a></li>
+      </ul>
+    </nav>
+    <button class="js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+      <svg class="menu-icon__burger" width="20" height="12">
+        <use href="./images/icons.svg#burger"></use>
+      </svg>
+    </button>
+    <button type="button" class="btn page-header__btn" data-modal-open>
+      Buy now
+      <svg class="btn__icon" width="8" height="8">
+        <use href="../images/sprite.svg#icon-next"></use>
+      </svg>
+    </button>
+  </div>
 </header>
