--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -1,14 +1,14 @@
     <button type="button" class="menu-open js-open-menu" aria-controls="mobile-menu" data-menu-button>
-        <svg width="20" height="12">
+        <!--<svg width="20" height="12">
             <use class="menu-button__icon-menu" href="./images/.svg#"></use>
-        </svg>
+        </svg>-->
     </button>
     <div class="menu-container js-menu-container" id="mobile-menu">
         <div>
             <button class="menu-close js-close-menu">
-                <svg width="13.5" height="14">
+                <!--<svg width="13.5" height="14">
                     <use class="menu-button__icon-cross" href="./images/.svg#"></use>
-                </svg>
+                </svg>-->
             </button>
         </div>
         <button type="button" data-modal-open class="menu-container__menu-button">Buy now</button>
