--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -3,7 +3,7 @@ li { list-style-type: none;
 
 .advantages{
     background-color: var(--main-bg-color);
-    padding: 39px 0px 145px 0px;
+    padding: 39px 0px 97px 0px;
 }
 
 .container{
@@ -53,6 +53,13 @@ li { list-style-type: none;
     font-weight: bold;
     font-size: 12px;
     line-height: 170%;
+
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+    }
 }
 
 .advantages__li+.advantages__li{
@@ -70,3 +77,11 @@ li { list-style-type: none;
     overflow: hidden;
 }
 
+.dvantages__list{
+    @media screen and (min-width: 768px) {
+        font-size: 48px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 58px
+    }
+}
