--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <header class="header">
   <div class="container header__container">
-    <a href="../index.html" class="logo">
-      <img class="logo__icon" src="../images/logo-x1.png" alt="logo" width="199" height="50" />
+    <a href="./index.html" class="logo">
+      <img class="logo__icon" src="./images/logo-x1.png" alt="logo" width="199" height="50" />
     </a>
 
     <nav class="header__nav">
       <ul class="nav">
         <li class="nav__list">
-          <a href="../index.html" class="nav__link nav__link--current">Home</a>
+          <a href="./index.html" class="nav__link nav__link--current">Home</a>
         </li>
         <li class="nav__list"><a href="#" class="nav__link">About us</a></li>
         <li class="nav__list"><a href="#" class="nav__link">How it’s made?</a></li>
