--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages">
     <h1 class="visually-hidden">advantages</h1>
-    <div class="container">
+    <div class="conteiner">
         <ul class="advantages__list">
             <li class="advantages__li">
                 <svg class="advantages__icon" width="33px" height="50px">
