--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,3 +1,28 @@
-<section class="try__5">
-    это секция преимуществ товара
+<section class="advantages">
+    <h1 class="visually-hidden">advantages</h1>
+    <div class="conteiner">
+        <ul class="advantages__list">
+            <li class="advantages__li">
+                <svg class="advantages__icon" width="33px" height="50px">
+                    <use href="./images/sprite.svg#icon-home"></use>
+                </svg>
+                <p class="advantages__bold-text">721</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantages__li">
+                <svg class="advantages__icon" width="50px" height="50px">
+                    <use href="./images/sprite.svg#icon-home"></use>
+                </svg>
+                <p class="advantages__bold-text">16kg</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantages__li">
+                <svg class="advantages__icon" width="44px" height="50px">
+                    <use href="./images/sprite.svg#icon-home"></use>
+                </svg>
+                <p class="advantages__bold-text">84</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+        </ul>
+    </div>
 </section>
