--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,4 +1,105 @@
-.try__5{
-    height: 300px;
-    background-color: #f1b8ff;
+
+// li { list-style-type: none;
+// }
+
+// .conteiner{
+//     max-width: 1200px;
+//     min-width: 280px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     margin-right: auto;
+//     margin-left: auto;
+//     justify-content: center;
+//     align-items: center;
+
+//     @media screen and (max-width: 767px) {
+//         max-width: 480px;
+//     }
+
+//     @media screen and (min-width: 768px) {
+//         width: 768px;
+        
+//         .header &{
+//             display:flex;  
+//             align-items: center;
+//             }
+//     }
+
+//     @media screen and (min-width: 1200px)   {
+//         width: 1200px;
+//     }  
+// }
+
+.advantages{
+    background-color: var(--main-bg-color);
+    padding: 39px 0px 97px 0px;
+}
+
+.advantages__bold-text{
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 1.13%;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+        font-size: 48px;
+
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 58px
+    }
+}
+
+.advantages__text{
+    font-family:'DM Sans';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 170%;
+
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+    }
+}
+
+.advantages__li+.advantages__li{
+    @media screen and (max-width: 768px) {
+        margin-top:38px ;
+    }
+ 
+}
+
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+
+.advantages__li{
+    @media screen and (min-width: 768px) {
+        margin-right: 73px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-right: 90px;
+    }
+}
+
+.advantages__list{
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
 }
