изменения в названии container

--- a/src/sass/_basis.scss
+++ b/src/sass/_basis.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: DM Sans;
+    font-family: DM Sans, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -38,7 +38,7 @@ img {
     font-weight: bold;
     line-height: 1.31;
 }
-.conteiner {
+.container {
    padding-left: 20px; 
    padding-right: 20px;
    margin: 0 auto;
