--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -17,6 +17,11 @@
                 <p class="advantages__bold-text">84</p>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
+            <li class="advantages__li">
+                <img url="/images/advantages/heart.png" alt="" class="advantages__icon " width="44px" height="50px"/>
+                <p class="advantages__bold-text">84</p>
+                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
         </ul>
     </div>
 </section>
