--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,3 +1,7 @@
-<section class="try__4">
-    это секция о продукте
+<section class="about">
+    <div class="container">
+        <p class="about-pre-text"> tradition and love </p>
+        <h2 class="about-title">how it’s made?</h2>
+        
+    </div>
 </section>
