gallery-img-collage

--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,4 +1,17 @@
 .try__6{
-    height: 300px;
-    background-color: #f4ffb8;
+ 
+    background: linear-gradient(to bottom, var(--main-bg-color) 24%,  var(--secondary--title-color) 0%);
+    align-items: center;
+    padding-bottom: 80px;
+}
+.container-gallery {
+    width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    align-items: center;
+}
+.gallery-main-img {
+    display: block;
 }
