--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,9 +1,10 @@
 <section class="try__6">
-    это секция с галереей
-    <picture>
-        <!-- <source  srcset="images/mobile/Display-x1/mobi-gallery-x1.jpg 1x, images/mobile/Display-x1/mobi-gallery-x2.jpg 2x" media="(max-width: 767px)"> -->
-        <!-- <source  srcset=" 1x, .jpg 2x" media="(max-width: 1199px)">
-        <source  srcset=".jpg 1x, .jpg 2x" media="(min-width: 1200px)"> -->
-        <img src="./images/mobile/Display-x1/mobi-gallery-x1.jpg" width="364" height="122" alt="галерея">
-    </picture>
+    <div class="container-gallery">
+        <picture>
+            <!-- <source  srcset="images/mobile/Display-x1/mobi-gallery-x1.jpg 1x, images/mobile/Display-x1/mobi-gallery-x2.jpg 2x" media="(max-width: 767px)"> -->
+            <!-- <source  srcset=" 1x, .jpg 2x" media="(max-width: 1199px)">
+            <source  srcset=".jpg 1x, .jpg 2x" media="(min-width: 1200px)"> -->
+            <img src="./images/mobile/Display-x1/mobi-gallery-x1.jpg" width="364" height="122" alt="галерея" class="gallery-main-img">
+        </picture>
+    </div>
 </section>
