--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,5 @@
 <footer class="footer">
     это секция подвал
+    <svg class="list-adress__link-svg2"><use href="./images/sprite.svg#icon-menu_40px">
+    </use></svg>
 </footer>
