--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -35,6 +35,7 @@
 
     --svg-bg-color: #FEA5BB;
     --svg-hover-bg-color: #D41443;
+    --border-footer: #E1E1E1;
 
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
