--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,38 @@
 <footer class="footer">
-    это секция подвал
-<p>homemade ice cream made</p>
-<h2>with passion</h2>
+<div class="container footer__main">
+    <div class="footer__blok-title">
+        <p class="footer__paragraf">homemade ice cream made</p>
+        <h2 class="footer__title">with passion</h2>
+    </div>
+    <div class="footer__blok-list">
+        <ul class="list footer__list">
+            <li class="footer__li">
+                <a href="#" class="footer__link">
+                    <svg class="footer__link--svg"><use href="./images/sprite.svg#icon-github">
+                    </use></svg>
+                </a>
+            </li>
+            <li class="footer__li">
+                <a href="#" class="footer__link">
+                    <svg class="footer__link--svg"><use href="./images/sprite.svg#icon-telegram">
+                    </use></svg>
+                </a>
+            </li>
+            <li class="footer__li">
+                <a href="#" class="footer__link">
+                    <svg class="footer__link--svg"><use href="./images/sprite.svg#icon-facebook">
+                    </use></svg>
+                </a>
+            </li>
+        </ul>
+        <p class="footer__tel">
+            Feel free to contact <a href="tel:+380966290475" class="link footer__link-tel"> +61 (0) 383 766 284</a>
+        </p>
+    </div>
+</div>
+<blockquote class="footer__quote">
+    &#169; 2019 - IceCream. <br>
+    All Rights Reserved
+</blockquote>
 </footer>
 
