--- a/src/sass/_basis.scss
+++ b/src/sass/_basis.scss
@@ -6,6 +6,7 @@ body {
     line-height: 1.76;
     letter-spacing: 0.04em;
     color: var(--main-text-color);
+    overflow-x: hidden;
 }
 
 p, h1, h2, h3 {
