--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,4 +1,85 @@
 .footer{
-    height: 300px;
-    background-color: #797979;
+    background-color: var(--main-bg-color);
+}
+.footer__main{
+    margin-bottom: 43px;
+}
+.footer__blok-title{
+    width: 234px;
+    margin-bottom: 43px;
+}
+.footer__blok-list{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.footer__list{
+    display: flex;
+    margin-bottom: 46px;
+}
+.footer__li+.footer__li{
+    margin-left: 28px;
+}
+.footer__paragraf{
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.2;
+    color: var(--pre-title-color);
+}
+.footer__title{
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    color: var(--svg-secondary-fill);
+}
+.footer__link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    border-radius: 50%;
+    color: var(--svg-main-fill);
+    &:hover,&:focus{
+        background-color: --svg-hover-bg-color;
+        
+    }
+}
+.footer__link--svg{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    fill: currentColor;
+    background-color: var(--svg-bg-color);
+}
+.footer__tel{
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 186%;
+}
+.footer__link-tel{
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 186%;
+    color: var(--svg-secondary-fill);
+}
+.footer__quote{
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 152%;
+    color: var(--third-text-color);
+    border-top: 1px solid var(--border-footer);
+    margin: 0;
+    display: flex;
+    justify-content: center;
 }
