--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,8 +31,10 @@
     </div>
 </div>
 <blockquote class="footer__quote">
-    &#169; 2019 - IceCream. <br>
-    All Rights Reserved
+    <p class="footer__quote__long">
+        &#169; 2019 - IceCream.
+        All Rights Reserved
+    </p>
 </blockquote>
 </footer>
 
