--- a/src/sass/_basis.scss
+++ b/src/sass/_basis.scss
@@ -43,7 +43,19 @@ img {
    padding-left: 20px; 
    padding-right: 20px;
    margin: 0 auto;
-
+   @media screen and (min-width: 480px) {
+    width: 480px;
+}
+    @media screen and (min-width: 768px) {
+        padding-left: 36px; 
+        padding-right: 36px;
+        width: 768px;
+    }
+    @media screen and (min-width: 1280px) {
+        padding-left: 115px; 
+        padding-right: 115px;
+        width: 1280px;
+    }
 }
 .section-title {
     font-family: Titan One;
