--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,12 +1,22 @@
 .footer{
     background-color: var(--main-bg-color);
+    padding-top: 3px;
 }
 .footer__main{
     margin-bottom: 43px;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 91px;
+    }
 }
 .footer__blok-title{
     width: 234px;
     margin-bottom: 43px;
+    @media screen and (min-width: 768px) {
+        width: 340px;
+        margin-bottom: 0px;
+    }
 }
 .footer__blok-list{
     display: flex;
@@ -27,6 +37,12 @@
     font-size: 18px;
     line-height: 1.2;
     color: var(--pre-title-color);
+    @media screen and (min-width: 768px) {
+        font-size: 26px;
+    }
+    @media screen and (min-width: 1280px) {
+        font-size: 30px;
+    }
 }
 .footer__title{
     font-family: Titan One;
@@ -36,6 +52,12 @@
     line-height: 1.2;
     letter-spacing: 0.04em;
     color: var(--svg-secondary-fill);
+    @media screen and (min-width: 768px) {
+        font-size: 48px;
+    }
+    @media screen and (min-width: 1280px) {
+        font-size: 66px;
+    }
 }
 .footer__link{
     display: flex;
@@ -62,6 +84,12 @@
     font-weight: 700;
     font-size: 12px;
     line-height: 186%;
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+    }
+    @media screen and (min-width: 1280px) {
+        font-size: 16px;
+    }
 }
 .footer__link-tel{
     font-family: DM Sans;
@@ -70,16 +98,30 @@
     font-size: 12px;
     line-height: 186%;
     color: var(--svg-secondary-fill);
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+    }
+    @media screen and (min-width: 1280px) {
+        font-size: 16px;
+    }
 }
 .footer__quote{
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid var(--border-footer);
+    margin: 0;
+    padding-top: 22px;
+    padding-bottom: 25px;
+}
+.footer__quote__long{
     font-family: DM Sans;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 152%;
     color: var(--third-text-color);
-    border-top: 1px solid var(--border-footer);
-    margin: 0;
-    display: flex;
-    justify-content: center;
+    width: 150px;
+    @media screen and (min-width: 768px) {
+        width: 300px;
+    }
 }
