добавляет таргет бланк и шрифт санс сериф

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -31,7 +31,7 @@
     margin-left: 28px;
 }
 .footer__paragraf{
-    font-family: Titan One;
+    font-family: Titan One, Sans Serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -45,7 +45,7 @@
     }
 }
 .footer__title{
-    font-family: Titan One;
+    font-family: Titan One, Sans Serif;
     font-style: normal;
     font-weight: normal;
     font-size: 34px;
@@ -79,7 +79,7 @@
     background-color: var(--svg-bg-color);
 }
 .footer__tel{
-    font-family: DM Sans;
+    font-family: DM Sans, Sans Serif;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
@@ -92,7 +92,7 @@
     }
 }
 .footer__link-tel{
-    font-family: DM Sans;
+    font-family: DM Sans, Sans Serif;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
@@ -114,7 +114,7 @@
     padding-bottom: 25px;
 }
 .footer__quote__long{
-    font-family: DM Sans;
+    font-family: DM Sans, Sans Serif;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
