--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,19 +7,22 @@
     <div class="footer__blok-list">
         <ul class="list footer__list">
             <li class="footer__li">
-                <a href="#" class="footer__link">
+                <a href="https://github.com/" target="_blank"
+                rel="noopener noreferrer" class="footer__link">
                     <svg class="footer__link--svg"><use href="./images/sprite.svg#icon-github">
                     </use></svg>
                 </a>
             </li>
             <li class="footer__li">
-                <a href="#" class="footer__link">
+                <a href="https://telegram.org/" target="_blank"
+                rel="noopener noreferrer" class="footer__link">
                     <svg class="footer__link--svg"><use href="./images/sprite.svg#icon-telegram">
                     </use></svg>
                 </a>
             </li>
             <li class="footer__li">
-                <a href="#" class="footer__link">
+                <a href="https://www.facebook.com/" target="_blank"
+                rel="noopener noreferrer" class="footer__link">
                     <svg class="footer__link--svg"><use href="./images/sprite.svg#icon-facebook">
                     </use></svg>
                 </a>
