--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,22 +1,21 @@
 .container {
   background-image: url(../images/mobile/Display-x1/mobi-mukalo-x1.png);
-<<<<<<< Updated upstream
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url(../images/mobile/Display-x2/);
-=======
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
   height: 400px;
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url(../images/mobile/Display-x2/mobi-mukalo-x2.png);
->>>>>>> Stashed changes
   }
 }
 .about-pre-text {
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: normal;
   font-size: 18px;
   line-height: 1.17;
   text-align: center;
   text-transform: uppercase;
+  color: var(--pre-title-color);
 }
 
 .about-title {
