--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,6 +12,7 @@
 
     --time-color: #FFA5BA;
     
+    --bg-color: #E5E5E5;
     --main-bg-color: #FFF5F6;
     --secondary-bg-color: #FFB8CA;
     --third-bg-color: #FFFFFF;
