--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,7 +6,7 @@
             <h3 class="products-list__heading">ice cream</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
-                    <use href=./images/svg/sprite.svg#></use>
+                    <use href="./images/svg/sprite.svg#icon-points-2"></use>
                 </svg>
             </span>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
@@ -16,7 +16,7 @@
                 minima? Libero!</p>
             <button type="button" class="products-list__button">
                 <svg class="products-list__button-icon" width="40" height="40">
-                    <use href=./images/svg/sprite.svg#></use>
+                    <use href="./images/svg/sprite.svg#icon-points-2"></use>
                 </svg>
             </button>
         </li>
@@ -24,7 +24,7 @@
             <h3 class="products-list__heading">ice coffee</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
-                    <use href=./images/svg/sprite.svg#></use>
+                    <use href="./images/svg/sprite.svg#icon-points-2"></use>
                 </svg>
             </span>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
@@ -34,7 +34,7 @@
                 minima? Libero!</p>
             <button type="button" class="products-list__button">
                 <svg class="products-list__button-icon" width="40" height="40">
-                    <use href=./images/svg/sprite.svg#></use>
+                    <use href="./images/svg/sprite.svg#icon-points-2"></use>
                 </svg>
             </button>
         </li>
@@ -42,7 +42,7 @@
             <h3 class="products-list__heading">milkshakes</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
-                    <use href=./images/svg/sprite.svg#></use>
+                    <use href="./images/svg/sprite.svg#icon-points-2"></use>
                 </svg>
             </span>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
@@ -50,7 +50,7 @@
                 eos repellendus, ipsa minima? Libero!</p>
             <button type="button" class="products-list__button">
                 <svg class="products-list__button-icon" width="40" height="40">
-                    <use href=./images/svg/sprite.svg#></use>
+                    <use href="./images/svg/sprite.svg#icon-points-2"></use>
                 </svg>
             </button>
         </li>
