--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -84,12 +84,12 @@
         <div class="contacts-btn">
             <button class="locations-btn button" type="button">Our Locations
                 <svg class="btn-icon" width="4" height="8">
-                    <use href="./image/sprite.svg#icon-arrow-right"></use>
+                    <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
             </button>
             <button class="franchise-btn button" type="button">Franchise
                 <svg class="btn-icon" width="4" height="8">
-                    <use href="./image/sprite.svg#icon-arrow-right"></use>
+                    <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
             </button>
         </div>
