--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,10 @@
 <section class="about">
-    <div class="container">
+    <div class="container about-container">
         <p class="about-pre-text"> tradition and love </p>
         <h2 class="about-title">how it’s made?</h2>
+        <picture>
+            <source src="./images/mobile/Display-x1/mobi-mukalo-x1.png 1x, ./images/mobile/Display-x1/mobi-mukalo-x2.png 2x">
+        </picture>
         
     </div>
 </section>
