--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -128,7 +128,7 @@
 
   &::before {
     content: '';
-    background-image: url(../images/previews/elipse.png);
+    background-image: url(../images/mobile/Display-x1/elipse.png);
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
