--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -82,7 +82,7 @@
             </li>
         </ul>
         <div class="contacts-btn">
-            <button class="locations-btn" type="button">Our Locations
+            <button class="locations-btn" type="button" data-location-open>Our Locations
                 <svg class="btn-icon" width="4" height="8">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
