--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages">
     <h2 class="visually-hidden">advantages</h2>
-    <div class="conteiner">
+    <div class="container">
         <ul class="advantages__list">
             <li class="advantages__li">
                 <img url="./images/advantages/apples.png" alt="ууу" class="advantages__icon" width="33px" height="50px"/>    
