--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -81,13 +81,13 @@
                 </ul>
             </li>
         </ul>
-        <div class="contacts-btn">
+        <div class="contacts-btn" >
             <button class="locations-btn" type="button" data-location-open>Our Locations
                 <svg class="btn-icon" width="4" height="8">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
             </button>
-            <button class="franchise-btn" type="button">Franchise
+            <button class="franchise-btn" type="button" data-footermodal-open>Franchise
                 <svg class="btn-icon" width="4" height="8">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
