--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,9 +1,12 @@
 .about {
   background-color: var(--main-bg-color);
-  height: 1688px;
   padding-top: 125px;
+  padding-bottom: 39px;
 }
-.about-pre-text {
+.about__container {
+  background-image: url(../images/mobile/Display-x1/about-bg-mob-1x.png);
+}
+.about__pre-text {
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
@@ -15,7 +18,7 @@
   margin-bottom: 15px;
 }
 
-.about-title {
+.about__title {
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
@@ -28,13 +31,13 @@
   margin-bottom: 26px;
 }
 
-.about-image {
+.about__image-cow {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 46px;
 }
 
-.about-text {
+.about__text-one {
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -44,11 +47,15 @@
   margin: 0 50px 40px 50px;
 }
 
-.about-text-two {
+.about__text-two {
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.58;
   color: var(--third-text-color);
+  margin: 0 50px 17px 50px;
+}
+.about-btn {
+  width: ;
 }
