Адаптивная вёрстка под таблетку и десктоп (только первый коментарий)

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,6 +6,12 @@
             <input class="radio" type="radio" name="com" id="r2">
             <input class="radio" type="radio" name="com" id="r3">
             <input class="radio" type="radio" name="com" id="r4">
+            <input class="radio" type="radio" name="com" id="r5">
+            <input class="radio" type="radio" name="com" id="r6">
+            <input class="radio" type="radio" name="com" id="r7">
+            <input class="radio" type="radio" name="com" id="r8">
+            <input class="radio" type="radio" name="com" id="r9">
+            <input class="radio" type="radio" name="com" id="r10">
             
             <div class="reviews__slide s1">
                 <img class="reviews__img" src="./images/mobile/Display-x1/SAVE_20210920_165639.jpg" alt="photo">
@@ -26,11 +32,7 @@
             <div class="reviews__slide">
                 <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
-                        hendrerit nulla quam
-                        nunc,
-                        accumsan
-                    </article>
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
                 </div>
 
                 <div class="slide-p">
@@ -43,10 +45,7 @@
             <div class="reviews__slide">
                 <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
-                        hendrerit nulla quam
-                        nunc,
-                        </article>
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
                 </div>
 
                 <div class="slide-p">
@@ -59,9 +58,7 @@
             <div class="reviews__slide">
                 <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
-                        hend
-                        congue.</article>
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
                 </div>
 
                 <div class="slide-p">
@@ -71,7 +68,84 @@
                 </div>
             </div>
 
-            
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Emily, Los Angeles
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Emily, Los Angeles
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Emily, Los Angeles
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Emily, Los Angeles
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Emily, Los Angeles
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Emily, Los Angeles
+                    </p>
+                </div>
+            </div>
+
         </div>
 
         <div class="reviews__navigator">
@@ -79,6 +153,12 @@
             <label for="r2" class="bar"></label>
             <label for="r3" class="bar"></label>
             <label for="r4" class="bar"></label>
+            <label for="r5" class="bar"></label>
+            <label for="r6" class="bar"></label>
+            <label for="r7" class="bar"></label>
+            <label for="r8" class="bar"></label>
+            <label for="r9" class="bar"></label>
+            <label for="r10" class="bar"></label>
         </div>
 
     </div>
