--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -10,6 +10,13 @@
   overflow: hidden;
   padding-left: 0;
   padding-right: 0;
+
+  @media screen and (min-width: 768px) {
+    width: 620px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 926px;
+  }
 }
 
 .container-comment {
@@ -26,12 +33,21 @@
     background-size: cover;
 
     position: absolute;
-    top: 23px;
-    left: 45px;
+    top: 35px;
+    left: 25px;
     z-index: 0;
 
     width: 54px;
     height: 40px;
+
+    @media screen and (min-width: 768px) {
+      top: 35px;
+      left: 115px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      left: 28%;
+    }
   }
 }
 
@@ -52,11 +68,27 @@
 
 .gradient {
   position: absolute;
-  top: 34%;
+  top: 43%;
   left: 18%;
   width: 180px;
   height: 73px;
-  background-image: repeating-linear-gradient(#bbb 1px, transparent 2px, transparent 30px);
+  background-image: repeating-linear-gradient(#bbb 1px, transparent 3px, transparent 30px);
+
+  @media screen and (min-width: 768px) {
+    top: 54%;
+    left: 20%;
+    width: 60%;
+    height: 25px;
+    background-image: repeating-linear-gradient(#bbb 1px, transparent 3px, transparent 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    top: 54%;
+
+    left: 30%;
+    width: 40%;
+    background-image: repeating-linear-gradient(#bbb 1px, transparent 2px, transparent 30px);
+  }
 }
 
 .reviews__img {
@@ -101,15 +133,15 @@
 }
 
 .reviews__slides {
-  width: 400%;
+  width: 1000%;
   height: 100%;
   display: flex;
 }
 
 .reviews__slide {
   position: relative;
-  width: 25%;
-  transition: all 500ms linear;
+  width: 10%;
+  transition: all 500ms var(--timing-function);
 }
 
 .slide-p {
@@ -150,11 +182,29 @@
   margin-left: 0;
 }
 #r2:checked ~ .s1 {
-  margin-left: -25%;
+  margin-left: -10%;
 }
 #r3:checked ~ .s1 {
-  margin-left: -50%;
+  margin-left: -20%;
 }
 #r4:checked ~ .s1 {
-  margin-left: -75%;
+  margin-left: -30%;
+}
+#r5:checked ~ .s1 {
+  margin-left: -40%;
+}
+#r6:checked ~ .s1 {
+  margin-left: -50%;
+}
+#r7:checked ~ .s1 {
+  margin-left: -60%;
+}
+#r8:checked ~ .s1 {
+  margin-left: -70%;
+}
+#r9:checked ~ .s1 {
+  margin-left: -80%;
+}
+#r10:checked ~ .s1 {
+  margin-left: -90%;
 }
