--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
-<section class="section-contacts">
-    <div class="container contacts">
+<section class="section-contacts contacts">
+    <div class="container ">
         <h2 class="visibility-title">Contacts</h2>
         <ul class="contacts-list">
             <li class="contacts-list_card">
@@ -19,11 +19,11 @@
                 </ul>
                 <ul class="contacts-list_address">
                     <li class="contacts-list_item">
-                        <a class="contact-list_link" href="mailto:noreply@envato.com">
+                        <a class="contacts-list_link" href="mailto:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
-                    <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
+                    <li class="contacts-list_item"><a class="contacts-list_link" href="tel:+610383766284 ">
                             +61(0) 383 766 284</a>
                     </li>
                 </ul>
@@ -45,11 +45,11 @@
                 </ul>
                 <ul class="contacts-list_address">
                     <li class="contacts-list_item">
-                        <a class="contact-list_link" href="mailto:noreply@envato.com">
+                        <a class="contacts-list_link" href="mailto:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
-                    <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
+                    <li class="contacts-list_item"><a class="contacts-list_link" href="tel:+610383766284 ">
                             +61(0) 383 766 284</a>
                     </li>
                 </ul>
@@ -71,11 +71,11 @@
                 </ul>
                 <ul class="contacts-list_address">
                     <li class="contacts-list_item">
-                        <a class="contact-list_link" href="mailto:noreply@envato.com">
+                        <a class="contacts-list_link" href="mailto:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
-                    <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
+                    <li class="contacts-list_item"><a class="contacts-list_link" href="tel:+610383766284 ">
                             +61(0) 383 766 284</a>
                     </li>
                 </ul>
