--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -2,7 +2,12 @@
   visibility: hidden;
 }
 .contacts {
-  background-image: linear-gradient(#fff 11%, #fff5f6 0 100%);
+  background-color: linear-gradient(#fff 4%, #fff5f6 0 100%);
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    background-color: linear-gradient(#fff 11%, #fff5f6 0 100%);
+  }
 }
 .contacts-list {
   display: flex;
@@ -167,7 +172,7 @@
   display: block;
   line-height: 1.5;
 }
-.contact-list_item {
+.contacts-list_item {
   font-size: 12px;
   line-height: 1.5;
 }
