--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="try__6">
-    <div class="container-gallery">
+    <div class="container-gallery container">
         <picture>
             <!-- <source  srcset="images/mobile/Display-x1/mobi-gallery-x1.jpg 1x, images/mobile/Display-x1/mobi-gallery-x2.jpg 2x" media="(max-width: 767px)"> -->
             <!-- <source  srcset=" 1x, .jpg 2x" media="(max-width: 1199px)">
