--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './header';
 @import './mobi-menu';
 @import './hero';
+@import './components/main-button.scss';
 @import './products';
 @import './about';
 @import './advantages';
@@ -26,3 +27,5 @@
 @import './footer';
 @import './main-modal';
 @import './modal-footer';
+@import './components/backdrop';
+
