--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -35,6 +35,11 @@
 
     --svg-bg-color: #FEA5BB;
     --svg-hover-bg-color: #D41443;
-
+    --box-shadow-card: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --border-button: 1px solid rgba(255, 0, 0, 0.1);
+    --modal-border-input: 1px solid rgba(141, 28, 13, 0.205);
+    --color-icon: #643d2ef8; 
+    --main-modal-background: #FFFFFF;
+  
  }
