--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -1,45 +1,37 @@
 
-<div class="backdrop is-hidden" data-footermodal>
-    <div class="modal">
+<div class="is-hidden modal " data-footermodal>
+    <div class=" modal__view">
         <button class="modal-button" data-footermodal-close>
-            <!-- <svg class="close-button" width="30" height="30">
-                <use href="./Images/close.svg#icon-close"></use>
-            </svg> -->
+            <svg class="close-button" width="30" height="30">
+                <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
+            </svg>
         </button>
 
 <form class="form-modak">
-    <p class="call-back">Оставьте свои данные, мы вам перезвоним</p>
-    <label class="modal-lable">Имя
+    <p class="call-back">Become our partner</p>
+    <label class="modal-lable">Name
         <input class="input-style" type="text" name="name">
             <!-- <svg class="form-icon" width="18" height="18">
-                <use href="./Images/symbol-botton.svg#icon-person" ></use>
+                <use href="./images/symbol-botton.svg#icon-close-black-18dp-2-1-1" ></use>
             </svg> -->
     </label>
-    <label  class="modal-lable">Телефон
+    <label  class="modal-lable">Tel
         <input class="input-style" type="text" name="tel">
             <!-- <svg class="form-icon" width="18" height="18">
-                <use href="./Images/symbol-botton.svg#icon-phone" ></use>
+                <use href="./images/symbol-botton.svg#icon-email-black-18dp-1" ></use>
             </svg> -->
     </label>
-    <label  class="modal-lable">Почта
+    <label  class="modal-lable">Email
         <input class="input-style" type="text" name="email">
             <!-- <svg class="form-icon" width="18" height="18">
-                <use href="./Images/symbol-botton.svg#icon-email" ></use>
+                <use href="./images/symbol-botton.svg#icon-email" ></use>
             </svg> -->
     </label>
 
-    <label for="coments" class="modal-lable">Коментарий 
-        <textarea id="coments" class="form-coments" name="coments" placeholder="Введите текст"></textarea></label>
-        
-    <div class="agreement">
-        <label  class="check-label">               
-            <input type="checkbox" class="checkbox"> 
-            <span class="icon-check"></span>
-            Соглашаюсь с рассылкой и принимаю
-        
-        <a class="" href="">Условия договора</a></label>
-    </div>
-        <button  type="submit" class="hero-button btn"> Отправить </button>
+    <label for="coments" class="modal-lable">Coments 
+        <textarea id="coments" class="form-coments" name="coments" placeholder="Enter text"></textarea></label>
+
+         <button class="franchise-btn footer-btn" type="button">Send latter</button>
 </form>
     </div>
 </div>
