--- a/src/sass/_modal-footer.scss
+++ b/src/sass/_modal-footer.scss
@@ -1,7 +1,7 @@
 .call-back{
     margin-bottom: 12px;
     margin-right: 5%;
-    font-family: 'Roboto';
+    font-family: 'DM Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -9,19 +9,27 @@
     text-align: center;
     letter-spacing: 0.03em;
 
-    color: var(--main-text-color);
+    color: var(--main-title-color);
     }
 
 .form-modak{
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
 
-    @media screen and (min-width: 1200px)   {
-        width: 530px;
-        min-height: 580px;
-        padding: 40px;
-    }
+.modal-button{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
 }
 
 .input-style{
@@ -54,44 +62,14 @@
 .modal-lable{
     position: relative;
     display: block;
-    font-family:'Roboto';
+    font-family:'DM Sans';
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
 
-    color: var(--secondary-text-color);
+    color: #212121;
     }
-    
-.agreement{
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-
-    a{ 
-        text-decoration: underline;
-        color: var(--accent-color);
-        justify-content: center;
-        margin-left: 3px;
-
-        // @media screen and (min-width: 767px) {
-        //    display: flex;
-        // }
-    
-        
-    }
-}
     
 .form-coments{
     outline: none;
@@ -164,51 +142,9 @@
     @media screen and (max-width: 479px) {
         padding: 40px 20px 40px 20px;
     }
-  }
-  
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  
-    width: 528px;
-    min-height: 581px;
-  
-    background: #ffffff;
-    box-shadow:
-    0px 1px 3px rgba(0, 0, 0, 0.12), 
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-  
-    transform: translate(-50%, -50%) scaleX(1);
-    transition: transform 250ms var(--timing-function);
-
-    @media screen and (min-width: 320px) and (max-width: 767px) {
-        max-width: 450px;
-        min-height: 609px;
-    }
-
-    @media screen and (max-width: 479px) {
-        width: 94%;
-        min-height: 609px;
-        padding: 20px;
-    }
-
-    @media screen and (min-width: 480px) and (max-width:1199px){
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 450px;
-    min-height: 609px;
-    padding: 40px;
-}
-  }
-  
+  }  
   .hero-button{
-    background-color: var(--accent-color);
+    // background-color: var(--accent-color);
     color: var(--mail-title-color);
     width: 200px;
     height: 50px;
@@ -229,5 +165,22 @@
         &:hover,
         &:focus { 
             background-color: #188ce8;
+        }
+    }
+
+    .form-modak .footer-btn {
+        box-shadow: 0px 4px 4px rgba(0,0,0,0.15);
+        cursor: pointer;
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+        justify-content: center;
+        display: block;
+        border: 0;
+
+        &:hover,
+        &:focus { 
+            background-color: var(--main-title-color);
+            color: #ffffff;
         }
     }
