--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,5 @@
 <section class="reviews">
-    <div class="reviews__comment container">
+    <div class="reviews__comment">
 
         <div class="reviews__slides">
             <input class="radio" type="radio" name="com" id="r1" checked>
