--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -10,6 +10,8 @@
   overflow: hidden;
   padding-left: 0;
   padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
 
   @media screen and (min-width: 768px) {
     width: 620px;
