--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -1,8 +1,8 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-data-main-modal>
     <div class="main-modal">
-        <button type="button" class="main-modal__button_close" width="30" height="30" data-modal-close><svg
+        <button type="button" class="main-modal__button_close" width="30" height="30" data-main-modal-close><svg
                 class="button-close__icon form-icon" width="18" height="18">
-                <use href="../images/sprite-main-modal.svg#icon-close-modal"></use>
+                <use href="../images/sprite.svg #icon-close-modal"></use>
             </svg>
         </button>
         <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
@@ -10,7 +10,7 @@
         <form class="main-modal__modal-form">
             <Label class="modal-form__label">
                 <div class="form-label__container"><svg class="modal-form__icon form-icon" width="18" height="18">
-                        <use href="../images/sprite-main-modal.svg#icon-person-modal"></use>
+                        <use href="../images/sprite.svg#icon-person-modal"></use>
                     </svg><span class="form-label__label-name">имя</span>
                     <span class="modal-form__container-input"><input type="text" name="username" class="modal-form__input"
                             autofocus  minlength="3" placeholder=" "></span>
@@ -18,7 +18,7 @@
             </Label>  
             <Label class="modal-form__label">
                 <div class="form-label__container"><svg class="modal-form__icon form-icon" width="18" height="18">
-                        <use href="../images/sprite-main-modal.svg#icon-phone-modal"></use>
+                        <use href="../images/sprite-main-modal.svg #icon-phone-modal"></use>
                     </svg> </svg><span class="form-label__label-name">Телефон</span>
                     <span class="modal-form__container-input"><input type="tel" name="phone_number"
                             class="modal-form__input" minlength="3" placeholder=" "></span>
@@ -26,7 +26,7 @@
             </Label>
             <Label class="modal-form__label">
                 <div class="form-label__container"><svg class="modal-form__icon form-icon" width="18" height="18">
-                        <use href="../images/sprite-main-modal.svg#icon-email-modal"></use>
+                        <use href="../images/sprite-main-modal.svg #icon-email-modal"></use>
                     </svg> </svg><span class="form-label__label-name">Почта</span>
                     <span class="modal-form__container-input"><input type="email" mame="email"
                             class="modal-form__input"  minlength="3" placeholder=" "></span>
