--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,4 +1,4 @@
-/.try__6{
+.try__6{
  
     background: linear-gradient(to bottom, var(--main-bg-color) 24%,  var(--secondary--title-color) 0%);
     align-items: center;
