--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -41,5 +41,6 @@
     --modal-border-input: 1px solid rgba(141, 28, 13, 0.205);
     --color-icon: #643d2ef8; 
     --main-modal-background: #FFFFFF;
+    --backdrop-background: rgba(85, 29, 29, 0.329);
   
  }
