--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,7 +17,6 @@
 @import './header';
 @import './mobi-menu';
 @import './hero';
-@import './components/main-button.scss';
 @import './products';
 @import './about';
 @import './advantages';
@@ -27,5 +26,6 @@
 @import './footer';
 @import './main-modal';
 @import './modal-footer';
-@import './components/backdrop';
+@import './backdrop';
+
 
