--- a/src/sass/_backdrop.scss
+++ b/src/sass/_backdrop.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: rgba(255, 0, 0, 0.137);
+    background-color: var(--backdrop-background);
     z-index: 1;
     transition: opacity, visibility;
     transition-duration: 250ms;
